# maintenance_manager

./: .gitignore  data_imports.py  import_budget_fy27.py  main.py  pyproject.toml
auth/: dependencies.py  security.py
crud/: asset.py  commodity_rates.py  depot.py  downtime.py  expense.py  inspection.py  inventory.py  invoice.py  issues.py  maintenance.py  po.py  supplier.py  tasks.py  user.py  utility.py  workOrders.py
frontend/: app.config.ts  nuxt.config.ts  package-lock.json  package.json
frontend/.nuxt/: app.config.mjs  components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
frontend/.output/: nitro.json
frontend/components/: WorkOrderModal.vue
frontend/composables/: useApi.ts  useAssetModels.ts  useAssets.ts  useAuth.ts  useTasks.ts  (+13 more)
routers/: asset.py  auth.py  commodity_rates.py  depot.py  downtime.py  expense.py  inspection.py  inventory.py  invoice.py  issues.py  maintenance.py  po.py  reports.py  supplier.py  tasks.py  user.py  utility.py  workOrders.py
schema/: database.py  models.py
test/: conftest.py  test_crud_asset.py  test_crud_depot.py  test_crud_downtime.py  test_crud_expense.py  test_crud_inspection.py  test_crud_inventory.py  test_crud_invoice.py  test_crud_maintenance.py  test_crud_po.py  test_crud_supplier.py  test_crud_tasks.py  test_crud_user.py  test_crud_utility.py  test_crud_workorders.py
utils/: cache.py  down_hours.py  pm_schedule.py  prod_metrics.py  production_hours.py  utils.py  weekly_report.py  weekly_report_html.py
(+178 files in other folders)
