[project]
name = "maintenance-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "bcrypt>=4.0",
    "PyJWT[crypto]>=2.8",
    "slowapi>=0.1.9",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "matplotlib>=3.9",
    "reportlab>=4.2",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=9.0.3",
]
